--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,10 @@
 {
   "presets": [
-    ["es2015", {"modules": false}],
+    ["es2015", {"modules": false}], "stage-0",
 
     "react"
   ],
   "plugins": [
-    "react-hot-loader/babel"
+    "react-hot-loader/babel", "react-html-attrs", "transform-class-properties", "transform-decorators-legacy"
   ]
 }
