Added babel plugin for object rest spread transform
http://redux.js.org/docs/recipes/UsingObjectSpreadOperator.html

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-dev-server": "^2.4.5"
   },
   "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "firebase": "^3.9.0"
   }
 }
