--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,9 @@
 {
   "presets": [
-    ["es2015", {"modules": false}], "stage-0",
-
+    ["es2015"],
     "react"
   ],
   "plugins": [
-    "react-hot-loader/babel", "react-html-attrs", "transform-class-properties", "transform-decorators-legacy"
+    "react-hot-loader/babel", "react-html-attrs", "transform-class-properties", "transform-decorators-legacy", ["transform-object-rest-spread", { "useBuiltIns": true }]
   ]
 }
