--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-redux": "^4.4.5",
+    "react-redux-form": "^1.11.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-promise-middleware": "^3.2.0",
