--- a/package.json
+++ b/package.json
@@ -18,14 +18,17 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "css-loader": "^0.28.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "react-hot-loader": "^3.0.0-beta.7",
     "react-redux": "^4.4.5",
     "react-redux-form": "^1.11.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-promise-middleware": "^3.2.0",
     "redux-thunk": "^2.1.0",
+    "style-loader": "^0.17.0",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.5"
   },
